outputs/main/hsevo_bpp_online_2025-07-31_09-32-42/problem_iter10_response1.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 12
    consolidation_factor: float = 18.252638386999443) -> np.ndarray:
                                                    ^
SyntaxError: unmatched ')'
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 12
    consolidation_factor: float = 42.69922733624147) -> np.ndarray:
                                                   ^
SyntaxError: unmatched ')'
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 12
    consolidation_factor: float = 42.69922733624147) -> np.ndarray:
                                                   ^
SyntaxError: unmatched ')'
